--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  remote_user: root
+#  remote_user: root
   tasks:
     - name: Create ansible user
       user: name=ansible shell=/bin/bash
