--- a/adduser.yml
+++ b/adduser.yml
@@ -17,3 +17,6 @@
     become_user: root
   - name: Expiring password for user "{{ add_user_name }}"
     shell: chage -d 0 "{{ add_user_name }}"
+    become: yes
+    become_user: root
+    
