--- a/adduser/adduser2.yml
+++ b/adduser/adduser2.yml
@@ -1,13 +1,21 @@
 ---
- - name: Create a login user
-     user:
-      name: ansible
-      password: mscsmi
-      groups: # Empty by default, here we give it some groups
-       - sudo
-      state: present
-      shell: /bin/bash       # Defaults to /bin/bash
-      system: no             # Defaults to no
-      createhome: yes        # Defaults to yes
-      home: /home/ansible    # Defaults to /home/<username>
-##
+- hosts: all
+  remote_user: bjsong
+  tasks:
+  - name: New System User
+    user: name="{{ add_user_name }}"
+        password="{{ upassword | password_hash('sha512') }}"
+        shell=/bin/bash
+    become: yes
+    become_user: root
+  - name: Add user to sudoers
+    lineinfile: dest=/etc/sudoers
+        regexp="{{ add_user_name }}   ALL"
+        line="{{ add_user_name }}   ALL=(ALL)   ALL"
+        state=present
+    become: yes
+    become_user: root
+  - name: Expiring password for user "{{ add_user_name }}"
+    shell: chage -d 0 "{{ add_user_name }}"
+    become: yes
+    become_user: root
