--- a/adduser/adduser1.yml
+++ b/adduser/adduser1.yml
@@ -3,13 +3,12 @@
   remote_user: bjsong
   tasks:
   - name: Create a login user
-    user:
-    - name: ansible
-      password: 'mscsmi'
-      groups: # Empty by default, here we give it some groups
-      - sudo
-      state: present
-      shell: /bin/bash       # Defaults to /bin/bash
-      system: no             # Defaults to no
-      createhome: yes        # Defaults to yes
-      home: /home/ansible    # Defaults to /home/<username>
+      user:
+       name: ansible
+       password: 'mscsmi'
+       groups: sudo          # Empty by default, here we give it some groups
+       state: present
+       shell: /bin/bash       # Defaults to /bin/bash
+       system: no             # Defaults to no
+       createhome: yes        # Defaults to yes
+       home: /home/ansible    # Defaults to /home/<username>
