--- a/adduser/adduser.yml
+++ b/adduser/adduser.yml
@@ -15,7 +15,7 @@
         state=present
     become: yes
     become_user: root
-  - name: Expiring password for user "{{ add_user_name }}"
-    shell: chage -d 0 "{{ add_user_name }}"
-    become: yes
-    become_user: root
+  #- name: Expiring password for user "{{ add_user_name }}"
+  #  shell: chage -d 0 "{{ add_user_name }}"
+  #  become: yes
+  #  become_user: root
