--- a/check_rtlagent.yml
+++ b/check_rtlagent.yml
@@ -5,7 +5,7 @@
     - name: Check RTL Agent is running
       shell: ps -ef | grep './agent.sh'
       register: result1
-    - debug: msg={{ result1.stdout }}
+    - debug: msg={{ result1.stdout_lines }}
 
 #    - name: Install libraries for RTL Agent
 #      apt: pkg="{{ item }}"
