--- a/portscan.yml
+++ b/portscan.yml
@@ -4,4 +4,4 @@
   - name: Scanning RTL service port(2600)
     shell: nmap -p2600 "{{ ip_address }}" | awk '/report/{printf $5"\t"} /2600/{printf "%s %s\n", $1, $2}'
     register: nmap_out
-  - debug: msg={{ nmap_out.stdout }}
+  - debug: msg={{ nmap_out.stdout_lines }}
