--- a/install_agent.yml
+++ b/install_agent.yml
@@ -1,18 +1,12 @@
 ---
 - hosts: all
   tasks:     
-  
-# kill RTL Agent and adb/sdb process
 
-    - name: Kill RTL Agent
-      shell: systemctl stop rtl-agent.service
+    - name: Install RTL Agent
+      apt:
+        deb: {{ deb_path }}
       become: yes
       become_user: root
-  
-    - name: Install RTL Agent
-      shell: dpkg -i {{ deb_path }}
-      register: result1
-    - debug: msg={{ result1.stdout_lines }}
     
     - name: Remove .deb file
       shell: rm {{ deb_path }}
